test/bad/generics/def05.px

func f<T>(x: T = 3, y: T = true) def
    return

f()
